--- a/Quad_tela.ui
+++ b/Quad_tela.ui
@@ -534,6 +534,19 @@
      <string>) + √</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btngrafic_3">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>510</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Mostrar Gráfico</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
