--- a/Afim_tela.ui
+++ b/Afim_tela.ui
@@ -229,13 +229,13 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>480</y>
-      <width>93</width>
-      <height>28</height>
+      <y>477</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Mostrar Gráfico</string>
     </property>
    </widget>
   </widget>
