--- a/Def.ui
+++ b/Def.ui
@@ -30,7 +30,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="btnExp">
       <property name="text">
        <string>Exponencial</string>
       </property>
