--- a/Log_tela.ui
+++ b/Log_tela.ui
@@ -144,6 +144,19 @@
      <string>Calcular</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btngrafic_2">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>330</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Mostrar Gráfico</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
